fix(Level Card Dropdown Fixes): fixed z-index of level cards and added listener for outside clicks for dropdown items

--- a/src/components/explore/level-cards/level-cards.page.scss
+++ b/src/components/explore/level-cards/level-cards.page.scss
@@ -24,7 +24,7 @@
         max-height: 367px;
         border-radius: 8px;
         position: absolute;
-        z-index: 9999;
+        z-index: var(--explore-dropown-list-items-z-index);
         
     }
 
